fix: Scroll overflow in callback procedures msg

--- a/src/renderer/issue-editor/styles.scss
+++ b/src/renderer/issue-editor/styles.scss
@@ -165,6 +165,7 @@
 /* Amendment & custom messages */
 
 .editor-pane-message-amendment,
+.editor-pane-message-callback_procedures,
 .editor-pane-message-custom {
   display: flex;
   flex-flow: column nowrap;
